--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,86 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,800;1,400;1,500;1,700;1,800&family=Roboto+Mono:ital,wght@0,100;0,200;0,400;0,600;0,700;1,100;1,200;1,400;1,600;1,700&display=swap');
+
+/*------------------------------Heading */
+
 .logo {
     background: url("../images/IMG_pe69rk.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-width: 360px;
+    min-width: 200px;
+    min-height: 200px;
+   
+    border-color: #fff;
+    border-width: 10px;
+    max-width: 440px;
+    max-height: 420px;
+    margin: 0%;
+}
+
+.name {
+    font-family: 'Playfair Display', serif;
+    font-size: 6em;
+    font-weight: 500;
+    text-align: center;
+}
+
+.title {
+    font-family: 'Playfair Display', serif;
+    font-size: 4em;
+    font-weight: 500;
+    text-align: center;
+}
+
+.navbar {
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 30px;
+    padding-bottom: 0px;
+}
+
+.heading {
+    background-color: rgba(216, 56, 22, 0.75)
+}
+
+.navbar > a {
+    color: #000;
+    text-decoration: none;
+}
+
+/*------------------------------Sections */
+
+
+section > i {
+    font-size: 90px;
+    display: block;
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+}
+
+/*------------------------------Font sizes */
+
+.col-sml-4 > .name {
+    font-size: 30px;
+}
+
+/*------------------------------General */
+
+.inline-block {
+    display: inline-block;
+    padding-top: 8px;
+}
+
+/*------------------------------Footing */
+
+.footing {
+    font-family: 'Playfair Display', serif;
+    text-align: center;
+    background-color: rgba(173, 92, 0, 0.747);
+    color:darkslategray;
+    margin: 0%;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+
 }
