Updated readme for submission

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,11 @@
 }
 
 /*------------------------------Sections */
-
+.container-section {
+    text-align: center;
+    margin: 0%;
+    margin-bottom: 20px;
+}
 
 section > i {
     font-size: 90px;
